<?xml version="1.0" encoding="utf-8"?>
<layout   xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="fr.maxba.dreamkotlinapi.ui.peoples.detail.DetailPeopleViewModel"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                style="@style/Toolbar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@{viewModel.people.name}"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/item_margin">

                <TextView
                        style="@style/Title"
                        android:id="@+id/birth_year_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_year"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        style="@style/Text"
                        android:id="@+id/birth_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="19 BBY"
                        android:text="@{viewModel.people.birth_year}"
                        android:layout_marginTop="@dimen/item_margin"
                        app:layout_constraintTop_toBottomOf="@id/birth_year_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                        style="@style/Title"
                        android:id="@+id/eye_colorTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eye_color"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/item_margin"
                        app:layout_constraintTop_toBottomOf="@id/birth_year"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                        style="@style/Text"
                        android:id="@+id/eye_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Blue"
                        android:text="@{viewModel.people.eye_color}"
                        android:layout_marginTop="@dimen/item_margin"
                        app:layout_constraintTop_toBottomOf="@id/eye_colorTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                        style="@style/Title"
                        android:id="@+id/genderTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/item_margin"
                        android:text="@string/gender"
                        app:layout_constraintTop_toBottomOf="@id/eye_color"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                        style="@style/Text"
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Male"
                        android:text="@{viewModel.people.gender}"
                        android:layout_marginTop="@dimen/item_margin"
                        android:layout_marginBottom="@dimen/item_margin"
                        app:layout_constraintTop_toBottomOf="@id/genderTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>